[package]
name = "Lythrum"
version = "0.1.0"
authors = ["ryoshibu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
name = "haribote_os"
crate-type = ["staticlib"]